--- a/static/css/debug.css
+++ b/static/css/debug.css
@@ -24,3 +24,9 @@ p {
     /* background-color: #4eff0024; */
 }
 
+span.search
+{
+     /* border-bottom: 2px dotted red; */
+    border: 3px dotted red;
+    
+}
