--- a/static/templates/main.html
+++ b/static/templates/main.html
@@ -12,7 +12,7 @@
   <link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet" type="text/css">
   <link id="theme" href="{{ url_for('static', filename='css/dark.css') }}" rel="stylesheet" type="text/css">
   <!-- <link href="{{ url_for('static', filename='css/fonts.css') }}" rel="stylesheet" type="text/css"> -->
-  <!-- <link href="{{ url_for('static', filename='css/debug.css') }}" rel="stylesheet" type="text/css"> -->
+  <link href="{{ url_for('static', filename='css/debug.css') }}" rel="stylesheet" type="text/css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
     <!--END верхнее меню -->
   </div>
 
-  <div id="content" data-lemmas="">
+  <div id="content" data-lemmas="[185, 598]">
   </div>
 </body>
 
