--- a/static/css/main.css
+++ b/static/css/main.css
@@ -60,6 +60,7 @@ a:hover, input[ type="text"]:focus {
 #content {
     margin: 0px auto;
     padding-top: 80px;
+    height:90%;
 }
 
 #header_container {
@@ -208,6 +209,28 @@ PHONE
 span.search
 {
  /* font-style:italic;  font-weight:bold; */
-    padding:3px;
+    padding:0px 6px;
     /* margin:12px; */
 }
+
+
+.nw{
+
+    white-space:nowrap;
+}
+
+.pr {padding-right:20px;}
+
+
+.medicine_list
+
+{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: wrap;
+	justify-content: flex-start;
+	align-items: stretch;
+	align-content: space-evenly;
+    height:80vh;
+}
+
