--- a/static/templates/main.html
+++ b/static/templates/main.html
@@ -23,8 +23,8 @@
 
       <!--блок лого-->
       <div id="logo_container" class="flex_hc">
-        <svg class="svgimg" style="width: 100px;height:80px;">
-          <use xlink:href="svg/icons.svg#logo"></use>
+        <svg class="svgimg" style="width: 70px; height:55px;">
+          <use xlink:href="svg/icons.svg#logo2"></use>
         </svg>
 
         <div id="logo_text" class="merriweather-bold" style="font-size:30px;margin-left:10px;">Мозгоправ</div>
@@ -32,7 +32,7 @@
 
       <!--блок поиска-->
       <div id="search_cont">
-        <input type="text" id="search_input" value="dfdsfdsfs fsdfsd fsd sdgsdgs dsfgsg sgsdgsdds dgsdgs sdfgsdgsdgsdgsd">
+        <input type="text" id="search_input" value="">
 
         <svg class="svgimg svghover svgbtn" id="search_img">
           <use xlink:href="svg/icons.svg#search"></use>
@@ -40,7 +40,7 @@
       </div>
 
       <!--служебные кнопки (шрифт/цвет)-->
-      <div class="flex_hc menu_buttons">
+      <div id="menu_buttons" class="flex_hc">
 
         <svg class="svgimg svghover svgbtn" id="theme">
           <use xlink:href="svg/icons.svg#dark"></use>
