--- a/static/templates/article.html
+++ b/static/templates/article.html
@@ -1,8 +1,9 @@
+<div class="doc_name">{{doc}}</div>
 {% for header_id in tree %}
 <div>
     <div data-header={{header_id}} class="flex_left_center">
         <!-- <div> -->
-        <svg class="svgimg svgbtn rot90" id="theme">
+        <svg class="svgimg svgbtn rot90" style="cursor: pointer;">
             <use xlink:href="svg/icons.svg#chevron"></use>
         </svg>
         <!-- <img class="rot90" src="img/chevron_right.png" width="32" height="32" alt=">" /> -->
