--- a/static/templates/main.html
+++ b/static/templates/main.html
@@ -22,7 +22,7 @@
     <div id="header_line" class="flex_hc">
 
       <!--блок лого-->
-      <div id="logo_container" class="flex_hc">
+      <div id="logo_container" class="flex_hc" data-link="cat_list" style="cursor: pointer;">
         <svg class="svgimg" style="width: 70px; height:55px;">
           <use xlink:href="svg/icons.svg#logo2"></use>
         </svg>
@@ -43,9 +43,9 @@
       <div id="menu_buttons" class="flex_hc">
 
         <svg class="svgimg svghover svgbtn" id="theme">
-          <use xlink:href="svg/icons.svg#dark"></use>
+          <use id="theme2" xlink:href="svg/icons.svg#dark"></use>
         </svg>
-        <svg class="svgimg svghover svgbtn" id="cat_list">
+        <svg class="svgimg svghover svgbtn" data-link="cat_list">
           <use xlink:href="svg/icons.svg#menu"></use>
         </svg>
 
