--- a/static/templates/main.html
+++ b/static/templates/main.html
@@ -17,12 +17,12 @@
 
 <body>
   <!--верхнее меню-->
-  <div id="header_container" class="flex_vc">
+  <div id="header_wrapper" class="flex_center_middle">
     <!--верхняя строка-->
-    <div id="header_line" class="flex_hc">
+    <div id="header_items" class="flex_center_middle">
 
       <!--блок лого-->
-      <div id="logo_container" class="flex_hc" data-link="cat_list" style="cursor: pointer;">
+      <div id="logo_wrapper" class="flex_center_middle" data-link="cat_list" style="cursor: pointer;">
         <svg class="svgimg" style="width: 70px; height:55px;">
           <use xlink:href="svg/icons.svg#logo2"></use>
         </svg>
@@ -40,7 +40,7 @@
       </div>
 
       <!--служебные кнопки (шрифт/цвет)-->
-      <div id="menu_buttons" class="flex_hc">
+      <div id="menu_buttons" class="flex_center_middle">
 
         <svg class="svgimg svghover svgbtn" id="theme">
           <use id="theme2" xlink:href="svg/icons.svg#dark"></use>
