--- a/static/templates/article.html
+++ b/static/templates/article.html
@@ -7,13 +7,12 @@
             <use xlink:href="svg/icons.svg#chevron"></use>
         </svg>
         <h1>{{texts[header_id]|safe}}</h1>
-        [{{header_id}}]
     </div>
 
     <div class="text_wrapper">
         
         {% for paragraph_id in tree[header_id] %}
-        <p>[{{paragraph_id}}] &nbsp;{{texts[paragraph_id]|safe}}</p>
+        <p>{{texts[paragraph_id]|safe}}</p>
         {% endfor %}
     </div>
 </div>
